--- a/LOGIN PAGE/main.html
+++ b/LOGIN PAGE/main.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="./main.css">
     </head>
     <body>
         <h2>Login Page</h2><br>
@@ -26,7 +26,10 @@
     <input type="checkbox" id="check">
     <span>Remember me</span> <!--span is an inline element as compared to div a block element-->
     <br><br>
-    Forgot <a href="#">Password</a>
+    <p style="text-align:right;">
+        Forgot<a href="#">password</a>
+    </p>
+    
 </form>
         </div>
     </body>
