my first login page

--- a/LOGIN PAGE/main.html
+++ b/LOGIN PAGE/main.html
@@ -21,7 +21,7 @@
         </label>
         <input type="Password" name="Pass" id="Pass" placeholder="Password">
     <br><br>
-    <input type="button" name="log" id="log" value="Log In Here">
+    <input type="button" name="log" id="log" value="Log in here">
     <br><br>
     <input type="checkbox" id="check">
     <span>Remember me</span> <!--span is an inline element as compared to div a block element-->
