--- a/LOGIN PAGE/main.html
+++ b/LOGIN PAGE/main.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="./main.css">
     </head>
     <body>
-        <h2>Login Page</h2><br>
+        <h2>Hello, Welcome!</h2><br>
         <div class="login">
             <form id="login" method="get" action="login.php">
                 <label><b>User Name <!--label defines a label for from elements-->
